--- a/gpu_implementation/gym_tensorflow/Makefile
+++ b/gpu_implementation/gym_tensorflow/Makefile
@@ -27,7 +27,7 @@ endif
 UNAME_S := $(shell uname -s)
 ifeq ($(UNAME_S),Linux)
     ifeq ($(USE_ALE),1)
-        FLAGS+= -Wl -rpath=$(ALE)/build
+        FLAGS+= -W -rpath=$(ALE)/build
     endif
 endif
 
